@@ -1,3 +1,11 @@
+>> 01.04.2011
+[CO]
+- Bugfix within "ImageData::Decompress()": Ouch! If there was e.g. an image of dimension 303x433 (none-multiple of 4 dimension) which should be
+  decompressed there was an buffer overflow because the blocks at the very right and very bottom wrote over the destination image area! Fixed
+  this issue by reducing the block size in this situation.
+
+
+
 >> 22.03.2011
 [CO]
 - "Image": Added ease of use method "CreateImage()"
